# TextureAnomalyDetection

./: .gitignore  README.md  main.py  pyproject.toml
data/: README.md
notebook/: exploration.ipynb
src/: __init__.py  benchmark_patchcore.py  test_patchcore.py  train_patchcore.py  utils.py
